<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_nav"
    app:startDestination="@id/firstBottomNavFragment">

    <fragment
        android:id="@+id/firstBottomNavFragment"
        android:name="com.github.mrbean355.android.navigation.bottomnav.FirstBottomNavFragment"
        android:label="@string/title_first_fragment" />
    <fragment
        android:id="@+id/secondBottomNavFragment"
        android:name="com.github.mrbean355.android.navigation.bottomnav.SecondBottomNavFragment"
        android:label="@string/title_second_fragment" />
    <fragment
        android:id="@+id/thirdBottomNavFragment"
        android:name="com.github.mrbean355.android.navigation.bottomnav.ThirdBottomNavFragment"
        android:label="@string/title_third_fragment" />

</navigation>